# kong

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  agents.md  build.rs  buildOSX.sh  kong.code-workspace
.github/: copilot-instructions.md
.github/instructions/: rust-module.instructions.md
.github/skills/kong-doctor/: SKILL.md
.github/skills/kong-parser/: SKILL.md
.github/skills/kong-registry/: SKILL.md
.github/skills/kong-scaffold/: SKILL.md
.github/skills/kong-store/: SKILL.md
.github/skills/kong-test/: SKILL.md
.github/skills/kong-venv/: SKILL.md
.github/workflows/: release-linux.yml
scripts/macos/: Info.plist  build-macos.sh
src/: cli.rs  config.rs  download.rs  extract.rs  gui.rs  link.rs  main.rs  migrate.rs  runner.rs  service.rs  store.rs
src/brew/: client.rs  installer.rs  mod.rs  parser.rs
src/node/: client.rs  mod.rs  modules.rs  parser.rs  platform.rs  runtime.rs
src/python/: client.rs  entry_points.rs  mod.rs  parser.rs  pep440.rs  runtime.rs  sdist.rs  venv.rs
src/rust_eco/: client.rs  mod.rs  parser.rs  runtime.rs  source.rs
ui/: kong.slint
